fix light theme, navigation on mobile

--- a/static/wedding/css/tailwind.css
+++ b/static/wedding/css/tailwind.css
@@ -598,11 +598,6 @@ video {
   margin-bottom: 1rem;
 }
 
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -619,21 +614,24 @@ video {
   min-height: 100svh;
 }
 
+.w-auto {
+  width: auto;
+}
+
 .w-full {
   width: 100%;
 }
 
-.w-auto {
-  width: auto;
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .justify-center {
   justify-content: center;
 }
 
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-x-2 {
@@ -650,34 +648,9 @@ video {
   background-color: rgb(209 250 229 / var(--tw-bg-opacity));
 }
 
-.bg-emerald-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(167 243 208 / var(--tw-bg-opacity));
-}
-
-.bg-emerald-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(110 231 183 / var(--tw-bg-opacity));
-}
-
 .bg-emerald-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(236 253 245 / var(--tw-bg-opacity));
-}
-
-.bg-fuchsia-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 171 252 / var(--tw-bg-opacity));
-}
-
-.bg-sky-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(125 211 252 / var(--tw-bg-opacity));
-}
-
-.bg-indigo-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(165 180 252 / var(--tw-bg-opacity));
 }
 
 .bg-teal-300 {
@@ -685,20 +658,9 @@ video {
   background-color: rgb(94 234 212 / var(--tw-bg-opacity));
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-8 {
-  padding: 2rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
-}
-
-.p-4 {
-  padding: 1rem;
+.bg-teal-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 246 228 / var(--tw-bg-opacity));
 }
 
 .px-2 {
@@ -706,19 +668,9 @@ video {
   padding-right: 0.5rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .py-3 {
@@ -726,18 +678,18 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pb-8 {
@@ -746,10 +698,6 @@ video {
 
 .pt-8 {
   padding-top: 2rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
 }
 
 .font-sans {
@@ -766,34 +714,14 @@ video {
   line-height: 2.5rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-9xl {
-  font-size: 8rem;
-  line-height: 1;
-}
-
 .text-7xl {
   font-size: 4.5rem;
   line-height: 1;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -859,31 +787,31 @@ video {
   }
 }
 
+.hover\:bg-teal-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 246 228 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-teal-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(94 234 212 / var(--tw-bg-opacity));
+}
+
+.data-\[active\]\:bg-teal-100[data-active] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(204 251 241 / var(--tw-bg-opacity));
+}
+
+.data-\[active\]\:bg-teal-400[data-active] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 212 191 / var(--tw-bg-opacity));
+}
+
 .data-\[active\]\:font-bold[data-active] {
   font-weight: 700;
 }
 
-@media (min-width: 1024px) {
-  .lg\:pb-2 {
-    padding-bottom: 0.5rem;
-  }
-
-  .lg\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .lg\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-}
-
 @media (min-width: 1280px) {
-  .xl\:p-2 {
-    padding: 0.5rem;
-  }
-
   .xl\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -912,6 +840,11 @@ video {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
+
+  .xl\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -930,51 +863,6 @@ video {
     background-color: rgb(2 44 34 / var(--tw-bg-opacity));
   }
 
-  .dark\:bg-emerald-700 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(4 120 87 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-emerald-600 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(5 150 105 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-fuchsia-700 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(162 28 175 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-fuchsia-800 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(134 25 143 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-sky-700 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(3 105 161 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-indigo-700 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(67 56 202 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-teal-700 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(15 118 110 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-teal-500 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(20 184 166 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-teal-600 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(13 148 136 / var(--tw-bg-opacity));
-  }
-
   .dark\:bg-teal-800 {
     --tw-bg-opacity: 1;
     background-color: rgb(17 94 89 / var(--tw-bg-opacity));
@@ -990,44 +878,14 @@ video {
     color: rgb(236 253 245 / var(--tw-text-opacity));
   }
 
-  .dark\:text-fuchsia-50 {
-    --tw-text-opacity: 1;
-    color: rgb(253 244 255 / var(--tw-text-opacity));
-  }
-
-  .dark\:text-sky-50 {
-    --tw-text-opacity: 1;
-    color: rgb(240 249 255 / var(--tw-text-opacity));
-  }
-
-  .dark\:text-indigo-50 {
-    --tw-text-opacity: 1;
-    color: rgb(238 242 255 / var(--tw-text-opacity));
-  }
-
   .dark\:text-teal-50 {
     --tw-text-opacity: 1;
     color: rgb(240 253 250 / var(--tw-text-opacity));
   }
 
-  .dark\:text-teal-900 {
-    --tw-text-opacity: 1;
-    color: rgb(19 78 74 / var(--tw-text-opacity));
-  }
-
   .dark\:hover\:bg-teal-700:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(15 118 110 / var(--tw-bg-opacity));
-  }
-
-  .dark\:focus\:bg-teal-600:focus {
-    --tw-bg-opacity: 1;
-    background-color: rgb(13 148 136 / var(--tw-bg-opacity));
-  }
-
-  .dark\:active\:bg-teal-600:active {
-    --tw-bg-opacity: 1;
-    background-color: rgb(13 148 136 / var(--tw-bg-opacity));
   }
 
   .dark\:data-\[active\]\:bg-teal-600[data-active] {
